--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [BOT_CONFIG]
 
-BOT_TOKEN = 5939793996:AAGGFiCYtV12EhynvpGkNca1KWDXPLDslsI
-HOST_URL = https://33a1-178-121-17-105.eu.ngrok.io
-ADMIN_ID = 123456
+BOT_TOKEN = 
+HOST_URL = 
+ADMIN_ID = 
 TIMEDELTA = 3
